Update opencc-data to 1.0.4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         python -m pip install -r requirements.txt
     - name: Build
       run: |
+        build/prepare.sh
         python build/main.py
     - name: Upload artifact
       uses: actions/upload-artifact@v2
