--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,28 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        pip install -r requirements.txt
+    - name: Create directories
+      run: mkdir -p opencc_data cache output
+    - name: Download OpenCC data
+      run: |
+        cd opencc_data
+        curl -LsSZ --remote-name-all https://cdn.jsdelivr.net/npm/opencc-data@1.0.5/data/{STCharacters.txt,STPhrases.txt,TWPhrasesIT.txt,TWPhrasesName.txt,TWPhrasesOther.txt,TWVariants.txt,HKVariants.txt}
+        cat TWPhrasesIT.txt TWPhrasesName.txt TWPhrasesOther.txt > TWPhrases.txt
+    - name: Download GenYoMin font
+      run: |
+        cd cache
+        curl -LsSO https://github.com/ButTaiwan/genyo-font/releases/download/v1.501/GenYoMin.zip
+        unzip -q -n GenYoMin.zip "*.ttc"
+    - name: Download character list
+      run: |
+        cd cache
+        curl -LsSo 通用規範漢字表.txt https://raw.githubusercontent.com/rime-aca/character_set/e7d009a8a185a83f62ad2c903565b8bb85719221/%E9%80%9A%E7%94%A8%E8%A6%8F%E7%AF%84%E6%BC%A2%E5%AD%97%E8%A1%A8.txt
     - name: Build
       run: |
-        build/prepare.sh
-        python build/main.py
+        python build/convert_tables.py
+        python build/code_points_han.py
+        python build/font.py
     - name: Copy license file
       run: cp LICENSE output
     - name: Upload font files
