--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,8 @@ jobs:
         python-version: '3.11'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        pip install -U pip
+        pip install -U wheel
         pip install "opencc<1.2"
         pip install -r requirements.txt
     - name: Build
